# france-ioi-bot

./: .gitignore  LICENSE  README.md  pyproject.toml
answers/Niveau 1/8 – Répétitions conditionnées/: 2) Administration  comptes annuels.py  3) Département de pédagogie  le « c'est plus, c'est moins ».py
answers/Niveau 2/1 – Nombres à virgules et autres outils/: 1) Achat de livres.py  2) Une belle récolte.py  3) La roue de la fortune.py
answers/Niveau 2/4 – Fonctions/: 9) Convertisseur d'unités.py
answers/Niveau_1/3_–_Calculs_et_decouverte_des_variables/: 3)_Bonbons_pour_tout_le_monde_!.py  8)_Decollage_de_fusee.py
answers/Niveau_1/5_–_Tests_et_conditions/: 6)_Traversee_du_pont.py  7)_Concours_de_tir_a_la_corde.py
answers/Niveau_1/7_–_Conditions_avancees,_operateurs_booleens/: 9)_L'espion_est_demasque_!.py
answers/Niveau_1/8_–_Repetitions_conditionnees/: 1)_Departement_de_medecine__controle_d'une_epidemie.py  4)_Departement_d'architecture__construction_d'une_pyramide.py  5)_Departement_de_chimie__melange_explosif.py
answers/Niveau_2/1_–_Nombres_a_virgules_et_autres_outils/: 1)_Augmentation_de_la_population.py  1)_Soiree_orageuse.py  2)_Augmentation_des_taxes.py  2)_Construction_de_maisons.py
answers/Niveau_2/3_–_Chaines_de_caracteres/: 1)_Fiches_d’inscription.py  1)_Impression_d’etiquettes.py  1)_Petites_fiches_et_gros_travail.py  2)_Analyse_de_frequence.py  2)_Ecriture_en_miroir.py  2)_Priorite_alphabetique_.py  3)_Inscription_d’etudiants.py  3)_Une_ligne_sur_deux_.py  4)_Resumes_de_livres_.py  4)_ngms_sns_vlls.py  (+4 more)
src/france_ioi_bot/: __main__.py
(+14 files in other folders)
