[project]
name = "france-ioi-bot"
version = "0.1.0"
description = "A bot that tries to complete all tasks on the France-IOI platform."
authors = [
    {name = "AstonishedLiker",email = "astonishedliker@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "argparse (>=1.4.0,<2.0.0)",
]

[tool.poetry]
packages = [{include = "france_ioi_bot", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
